[package]
name = "livesplit-one"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# druid = { path = "druid/druid" }
druid = { git = "https://github.com/CryZe/druid", branch = "changes-for-livesplit-one" }
livesplit-core = { path = "../../livesplit-core", features = ["font-loading", "software-rendering", "auto-splitting"] }
# livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", features = ["font-loading", "software-rendering", "auto-splitting"] }
image = "0.24.2"
log = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.85", features = ["derive", "rc"] }
serde_yaml = "0.9.14"
fern = "0.6.0"
chrono = { version = "0.4.0", features = ["serde", "clock"], default-features = false }
directories = "4.0.1"
backtrace = "0.3.61"
mimalloc = { version = "0.1.27", default-features = false }
once_cell = "1.16.0"
native-dialog = "0.6.3"
anyhow = "1.0.68"
fontdb = "0.13.0"

# [profile.dev.package."*"]
# opt-level = 3
# # debug = false
# debug-assertions = false
# overflow-checks = false

# [profile.dev.build-override]
# opt-level = 0

[profile.release]
lto = true
panic = "abort"
# debug = true

[profile.release.build-override]
opt-level = 0
